--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
         <header>
             <h1><a href="https://github.com/rakesh-emuru/">Rakesh Emuru</a></h1>
-            <img src="https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/3a1552336a16c41d06ae9c90a0d29de5a58389c6/Rakesh%20Emuru%20Photo.jpg" alt="Rakesh Emuru Image">
+            <img src="https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/main/Rakesh%20Emuru%20Photo.jpg?raw=true" alt="Rakesh Emuru Image">
             <p>
                 Hi, I am Rakesh, a Data Science grad student with interests in the applications of artificial intelligence and machine learning. <br><br> <a href="https://www.linkedin.com/in/rakesh-emuru/">View My LinkedIn Profile</a>
             </p>
