--- a/index.html
+++ b/index.html
@@ -1,53 +1,85 @@
-## Portfolio
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rakesh Emuru's Portfolio</title>
+    <style>
+        body {
+            background-color: #f4f4f4;
+            font-family: Arial, sans-serif;
+        }
 
----
+        h2, h3 {
+            color: #333;
+        }
 
-### Data Structures and Algorithms
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
 
----
+        a:hover {
+            color: #0056b3;
+        }
 
-### Data Science Projects 
+        .section {
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="section">
+        <h2>Portfolio</h2>
+        <hr>
+    </div>
 
-[Analysis and Prediction of Voter Turnout Percentage in USA](https://github.com/rakesh-emuru/Data-Science/tree/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA)
+    <div class="section">
+        <h3>Data Structures and Algorithms</h3>
+        <hr>
+    </div>
 
-The purpose of this study is to provide evidence on the behavior and characteristics of voter turnout in the United States. The research examines voter turnout in the 2020 presidential election for every county in the USA and investigates the impact of sociodemographic variables on voter turnout. The project aims to create a voter turnout model using machine learning to predict optimal conditions for higher electoral turnout rates. The findings will inform policymakers in designing and implementing electoral policies to increase voter participation.
+    <div class="section">
+        <h3>Data Science Projects</h3>
+        <p>
+            <a href="https://github.com/rakesh-emuru/Data-Science/tree/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA">
+                Analysis and Prediction of Voter Turnout Percentage in USA
+            </a>
+        </p>
+        <p>
+            The purpose of this study is to provide evidence on the behavior and characteristics of voter turnout in the United States. The research examines voter turnout in the 2020 presidential election for every county in the USA and investigates the impact of sociodemographic variables on voter turnout. The project aims to create a voter turnout model using machine learning to predict optimal conditions for higher electoral turnout rates. The findings will inform policymakers in designing and implementing electoral policies to increase voter participation.
+        </p>
+        <p>
+            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA/voter_turnout_prediction.ipynb">
+                Code Repository
+            </a>
+        </p>
+        <hr>
+    </div>
 
-[Code Repository](https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA/voter_turnout_prediction.ipynb)
+    <div class="section">
+        <h3>Research Assistantship</h3>
+        <p>
+            <a href="https://www.benjaminbagozzi.com/sadl.html">
+                Data Science Research Assistant to Benjamin E. Bagozzi (Assistant Director of Data Science - University of Delaware)
+            </a>
+            <br>
+            Sep 2023 - Dec 2024
+        </p>
+        <ul>
+            <li>Extracted and organized data from audio files and 162 inconsistent UNFCCC PDFs (including text and scanned images) into a structured CSV.</li>
+            <li>Developed BERT and GPT-based models for text classification with an accuracy of 83%.</li>
+            <li>Conducted in-depth textual analysis, including verb extraction and co-occurrence analysis, to reveal word relationships and patterns.</li>
+        </ul>
+        <hr>
+    </div>
 
----
-
-### Research Assistantship
-
-[Data Science Research Assistant to Benjamin E. Bagozzi (Assistant Director of Data Science - University of Delaware)](https://www.benjaminbagozzi.com/sadl.html)  
-*Sep 2023 - Dec 2024*
-
-- Extracted and organized data from audio files and 162 inconsistent UNFCCC PDFs (including text and scanned images) into a structured CSV.
-- Developed BERT and GPT-based models for text classification with an accuracy of 83%.
-- Conducted in-depth textual analysis, including verb extraction and co-occurrence analysis, to reveal word relationships and patterns.
-
-### Publications
-
-- [Tech Blog](https://medium.com/@emururakesh)
-- [GitHub](https://github.com/rakesh-emuru)
-
----
-
-<style>
-body {
-  background-color: #f4f4f4;
-  font-family: Arial, sans-serif;
-}
-
-h3 {
-  color: #333;
-}
-
-a {
-  color: #007bff;
-}
-
-a:hover {
-  color: #0056b3;
-}
-
-</style>
+    <div class="section">
+        <h3>Publications</h3>
+        <p>
+            <a href="https://medium.com/@emururakesh">Tech Blog</a><br>
+            <a href="https://github.com/rakesh-emuru">GitHub</a>
+        </p>
+    </div>
+</body>
+</html>
