--- a/index.html
+++ b/index.html
@@ -3,71 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rakesh Emuru's Portfolio</title>
+    <title>Rakesh Emuru</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav id="navbar">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="projects.html">PROJECTS</a></li>
-            <li><a href="blog.html">BLOGS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li><a href="resume.pdf" target="_blank">RESUME</a></li>
-        </ul>
-    </nav>
-    <div class="section">
-        <h2>Portfolio</h2>
-        <hr>
-    </div>
+    <header class="hero-image">
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="certifications.html">CERTIFICATIONS AND MOOCS</a></li>
+                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="blog.html">BLOGS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="resume.pdf" target="_blank">RESUME</a></li>
+            </ul>
+        </nav>
+        <div class="hero-text">
+            <h1>I am Rakesh Emuru</h1>
+            <p>Passionate data scientist with a solid academic background from the University of Delaware and hands-on experience across various industry projects. Proficient in all stages of the data science lifecycle, I thrive on extracting actionable insights from data. My contributions span text-as-data research and full-stack development, utilizing Python, machine learning, and data analysis to drive innovation. Demonstrated excellence through impactful achievements in previous roles. Eager to collaborate, innovate, and tackle complex challenges with data. Let's connect and explore opportunities together!
 
-    <div class="section">
-        <h3>Data Structures and Algorithms</h3>
-        <hr>
-    </div>
-
-    <div class="section">
-        <h3>Data Science Projects</h3>
-        <p>
-            <a href="https://github.com/rakesh-emuru/Data-Science/tree/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA">
-                Analysis and Prediction of Voter Turnout Percentage in USA
-            </a>
-        </p>
-        <p>
-            The purpose of this study is to provide evidence on the behavior and characteristics of voter turnout in the United States. The research examines voter turnout in the 2020 presidential election for every county in the USA and investigates the impact of sociodemographic variables on voter turnout. The project aims to create a voter turnout model using machine learning to predict optimal conditions for higher electoral turnout rates. The findings will inform policymakers in designing and implementing electoral policies to increase voter participation.
-        </p>
-        <p>
-            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA/voter_turnout_prediction.ipynb">
-                Code Repository
-            </a>
-        </p>
-        <hr>
-    </div>
-
-    <div class="section">
-        <h3>Research Assistantship</h3>
-        <p>
-            <a href="https://www.benjaminbagozzi.com/sadl.html">
-                Data Science Research Assistant to Benjamin E. Bagozzi (Assistant Director of Data Science - University of Delaware)
-            </a>
-            <br>
-            Sep 2023 - Dec 2024
-        </p>
-        <ul>
-            <li>Extracted and organized data from audio files and 162 inconsistent UNFCCC PDFs (including text and scanned images) into a structured CSV.</li>
-            <li>Developed BERT and GPT-based models for text classification with an accuracy of 83%.</li>
-            <li>Conducted in-depth textual analysis, including verb extraction and co-occurrence analysis, to reveal word relationships and patterns.</li>
-        </ul>
-        <hr>
-    </div>
-
-    <div class="section">
-        <h3>Publications</h3>
-        <p>
-            <a href="https://medium.com/@emururakesh">Tech Blog</a><br>
-            <a href="https://github.com/rakesh-emuru">GitHub</a>
-        </p>
-    </div>
+Actively seeking new data science full-time and Internship opportunities to further enhance my skills.</p>
+        </div>
+    </header>
 </body>
 </html>
