--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rakesh Emuru</title>
+    <title>Rakesh Emuru's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="hero-image">
-        <nav class="navbar">
+    <header>
+        <nav id="navbar">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
@@ -19,12 +19,12 @@
                 <li><a href="resume.pdf" target="_blank">RESUME</a></li>
             </ul>
         </nav>
-        <div class="hero-text">
-            <h1>I am Rakesh Emuru</h1>
-            <p>Passionate data scientist with a solid academic background from the University of Delaware and hands-on experience across various industry projects. Proficient in all stages of the data science lifecycle, I thrive on extracting actionable insights from data. My contributions span text-as-data research and full-stack development, utilizing Python, machine learning, and data analysis to drive innovation. Demonstrated excellence through impactful achievements in previous roles. Eager to collaborate, innovate, and tackle complex challenges with data. Let's connect and explore opportunities together!
-
-Actively seeking new data science full-time and Internship opportunities to further enhance my skills.</p>
-        </div>
     </header>
+    <main>
+        <h1>I am Rakesh Emuru</h1>
+        <p>
+            Passionate data scientist with a solid academic background from the University of Delaware and hands-on experience across various industry projects. Proficient in all stages of the data science lifecycle, I thrive on extracting actionable insights from data. My contributions span text-as-data research and full-stack development, utilizing Python, machine learning, and data analysis to drive innovation. Demonstrated excellence through impactful achievements in previous roles. Eager to collaborate, innovate, and tackle complex challenges with data. Let's connect and explore opportunities together! Actively seeking new data science full-time and Internship opportunities to further enhance my skills.
+        </p>
+    </main>
 </body>
 </html>
