--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <p>
             Passionate data scientist with a solid academic background from the University of Delaware and hands-on experience across various industry projects. Proficient in all stages of the data science lifecycle, I thrive on extracting actionable insights from data. My contributions span text-as-data research and full-stack development, utilizing Python, machine learning, and data analysis to drive innovation. Demonstrated excellence through impactful achievements in previous roles. Eager to collaborate, innovate, and tackle complex challenges with data. Let's connect and explore opportunities together! Actively seeking new data science full-time and Internship opportunities to further enhance my skills.
         </p>
+
+        <h2> Launching Portfolio newly in few hours by adding  new Accomplishments with new design </h2>
     </div>
 </body>
 </html>
