--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="C:\\Users\\emuru\\Downloads\\rakesh-emuru-photo.png">
+    <link rel="icon" type="image/png" href="Images/rakesh-emuru-photo.png">
     <link rel="stylesheet" href="rakesh_portfolio_styles.css">
 </head>
 <body>
@@ -103,7 +103,7 @@
         <h2 style="color: brown; background-color: rgba(255, 255, 224, 0.8); display: inline-block; padding: 5px 10px; border-radius: 5px;">
             Skills with Practical Knowledge</h2>
         <div class="skill-image" style="text-align:center;">
-            <img src="C:\\Users\\emuru\\Downloads\\Rakesh Skills level.png" alt="Rakesh's Skills Level"
+            <img src="Images/Rakesh Skills level.png"
                  style="width:999px; height:auto;">
         </div>
     </div>
@@ -118,7 +118,7 @@
                     <div class="flipper">
                         <div class="front">
                             <img style="height:200px; width:200px;"
-                                 src="C:\\Users\\emuru\\Downloads\\Voter Turnout Percentage Analysis and Prediction.png"
+                                 src="Images/Voter Turnout Percentage Analysis and Prediction.png"
                                  alt="Project Image" class="project-image">
                             <div class="project-category">Machine Learning</div>
                             <h2 class="project-title">USA Voter Turnout Analysis and Prediction</h2>
@@ -170,7 +170,7 @@
                     <div class="flipper">
                         <div class="front">
                             <img style="height:200px; width:200px;"
-                                 src="C:\\Users\\emuru\\Downloads\\newyork_stop_and_frisk.png"
+                                 src="Images/newyork_stop_and_frisk.png"
                                  alt="Project Image" class="project-image">
                             <div class="project-category">Computer Vision</div>
                             <h2 class="project-title">Signature Authentication with Siamese Networks</h2>
