--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="flipper">
                         <div class="front">
                             <img style="height:200px; width:200px;"
-                                 src="C:\\Users\\emuru\\Downloads\\donorschoose.jpeg"
+                                 src="Images/donorschoose.jpeg"
                                  alt="Project Image" class="project-image">
                             <div class="project-category">NLP | Machine Learning</div>
                             <h2 class="project-title">Educational Project Approval Prediction for DonorsChoose.org</h2>
@@ -170,7 +170,7 @@
                     <div class="flipper">
                         <div class="front">
                             <img style="height:200px; width:200px;"
-                                 src="Images/newyork_stop_and_frisk.png"
+                                 src="Images/signature verification.png"
                                  alt="Project Image" class="project-image">
                             <div class="project-category">Computer Vision</div>
                             <h2 class="project-title">Signature Authentication with Siamese Networks</h2>
@@ -204,15 +204,11 @@
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
                                target="_blank" class="project-link">
                                 <p class="project-description truncated">
-                                    This Citi Bike project examines the impact of New York City's expansive bike share
-                                    program on
-                                    urban living, focusing on usage patterns, community benefits, and the controversies
-                                    surrounding
-                                    service distribution and accessibility. It provides an in-depth analysis of
-                                    ridership behaviors
-                                    and seeks to understand the program's role in promoting healthier lifestyles and
-                                    alleviating
-                                    urban congestion.
+                                   This project delves into the evolving landscape of New York City's commercial
+                                    sectors by
+                                    analyzing the spatio-temporal trends of business distribution across different zip
+                                    codes,
+                                    reflecting the city’s dynamic economic changes.
                                 </p></a>
                         </div>
                     </div>
@@ -232,12 +228,16 @@
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
                                target="_blank" class="project-link">
-                                <p class="project-description truncated">
-                                    This project delves into the evolving landscape of New York City's commercial
-                                    sectors by
-                                    analyzing the spatio-temporal trends of business distribution across different zip
-                                    codes,
-                                    reflecting the city’s dynamic economic changes."
+                                <p class="project-description truncated">                                    
+                                     This Citi Bike project examines the impact of New York City's expansive bike share
+                                    program on
+                                    urban living, focusing on usage patterns, community benefits, and the controversies
+                                    surrounding
+                                    service distribution and accessibility. It provides an in-depth analysis of
+                                    ridership behaviors
+                                    and seeks to understand the program's role in promoting healthier lifestyles and
+                                    alleviating
+                                    urban congestion.
                                 </p></a>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link">
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     The project applies a Random Forest algorithm to predict weapon discovery in NYPD
                                     Stop, Question, and Frisk incidents, critically evaluating the program's impact on
