--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="Images/rakesh-emuru-photo.png">
+    <link rel="icon" type="image/png" href="C:\\Users\\emuru\\Downloads\\rakesh-emuru-photo.png">
+    <!--    <link rel="icon" type="image/png" href="Images/rakesh-emuru-photo.png">-->
     <link rel="stylesheet" href="rakesh_portfolio_styles.css">
 </head>
 <body>
@@ -22,7 +23,6 @@
        target="_blank" onmouseover="this.style.cursor='pointer'">Resume</a>
     <a data-target="contact" onmouseover="this.style.cursor='pointer'">Contact</a>
 </div>
-
 
 <div class="w3-padding-large" id="main">
     <header class="w3-container w3-padding-32 w3-center" id="home">
@@ -50,9 +50,27 @@
             </a>
         </div>
 
+        <div class="value-proposition">
+            <h2 style="font-weight: 700;"><i class="fa fa-user" aria-hidden="true"></i> The Advantage of Hiring Me.</h2>
+            <ol>
+                <li><span>•</span> Expertise in distilling complex datasets into strategic insights for informed
+                    decision-making.
+                </li>
+                <li><span>•</span> Proficient in ML, computer vision, and NLP for tackling real-world problems.</li>
+                <li><span>•</span> Full-stack development acumen, crafting user-focused apps with seamless deployment.
+                </li>
+                <li><span>•</span> Full SDLC proficiency, delivering projects with dedication to professional
+                    excellence.
+                </li>
+                <li><span>•</span> Proven track record of meticulous project execution, ensuring successful outcomes.
+                </li>
+                <li><span>•</span>Fast learner of new technologies, as demonstrated by my quick grasp of current ones.</li>
+            </ol>
+        </div>
+
     </header>
 
-<!--  Rakesh Emuru Introduction -->
+    <!--  Rakesh Emuru Introduction -->
     <div class="container" style="text-align: center;">
         <div class="section" id="about"
              style="background: linear-gradient(to right, #dbe3cb, #c9d7b6); color: #333; padding: 40px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); max-width: 800px; margin: auto; padding: 20px;">
@@ -60,20 +78,20 @@
                 About Me</h2>
             <hr style="width: 200px; border-color: yellowgreen; margin-top: 10px; margin-bottom: 20px;">
             <p style="text-align: left;">
-                After completing my undergraduate degree in Computer Science at JNTUA in India, I began my career as a
-                Trainee Software Developer at CovalenseDigital. There, I quickly proved my ability to navigate complex
+                After completing my <span style="color: blue;"> undergraduate degree in Computer Science </span>at JNTUA in India, I began my career as a
+                <span style="color: blue;"> Software Developer </span> at CovalenseDigital. There, I quickly proved my ability to navigate complex
                 challenges, developing key solutions such as a user interface for auto-generating database migration
                 files and the Csmart Payments Module. These early accomplishments, highlighted by receiving the Junior
                 Champion and SPOT Award, solidified my foundation in software and data science.
             </p>
             <p>
-                Advancing to a Full Stack Developer role at Trendlyne.com, my contributions drove significant
+                Advancing to a <span style="color: blue;"> Full Stack Developer with Machine Learning </span> role at Trendlyne.com, my contributions drove significant
                 enhancements in user engagement and operational efficiency, evidenced by an 18% uplift in website visits
                 and mastery in automating data extraction processes for stock market analytics. This role honed my
                 skills in Python, Django, and SQL, and underscored my impact in a fast-paced, data-driven environment.
             </p>
             <p>
-                My transition to Data Science was cemented at the University of Delaware, where as a Research Assistant,
+                My transition to Data Science was cemented at the University of Delaware, where as a <span style="color: blue;"> Data Science Research Assistant</span>,
                 I led a complex project under Dr. Benjamin Bagozzi's guidance. I developed an automated pipeline for
                 processing unstructured text data, achieving a remarkable 92% accuracy in text classification, a feat
                 that underscored my technical prowess and innovative thinking. The culmination of this project was a
@@ -82,16 +100,18 @@
             <h4 style="color: brown; background-color: rgba(255, 255, 224, 0.8); display: inline-block; padding: 5px 10px; border-radius: 5px; margin-top: 20px;">
                 <strong>Core Competencies:</strong></h4>
             <ul style="text-align: left;">
-                <li style="margin-bottom: 10px;">Expertise in Programming Languages: Python, SQL, C, JavaScript, HTML,
-                    CSS
+                <li style="margin-bottom: 10px;"><span style="color: blue; font: icon; color: firebrick;">Programming Languages:</span> Python, SQL, C.
                 </li>
-                <li style="margin-bottom: 10px;">Advanced Data Science Skills: Machine Learning, NLP, Data
-                    visualization, and Statistical methods
+                <li style="margin-bottom: 10px;">
+                    <span style="color: blue; font: icon; color: firebrick;">Data Analysis & Machine Learning:</span> Pandas, NumPy, Data visualization (Matplotlib, Seaborn, Tableau), Classical Machine Learning, Deep learning, NLP, Statistical methods (Regression Analysis, Hypothesis testing).
                 </li>
-                <li style="margin-bottom: 10px;">Proficiency with Tools and Technologies: Django, MySQL, Git, REST APIs,
-                    Big Data (Spark)
+                <li style="margin-bottom: 10px;">
+                    <span style="color: blue; font: icon; color: firebrick;">Data Science Processes:</span> A/B testing, ETL, Data Cleaning, Time Series Analysis, and Experimental design.
+                </li>
+                <li style="margin-bottom: 10px;"><span style="color: blue; font: icon; color: firebrick;"> Software & Tools:</span> Django, MySQL, Git, JIRA, REST APIs, Beautiful Soup, Spark, Excel, Linux, TensorFlow.
                 </li>
             </ul>
+
             <p style="text-align: left;">
                 <span style="color: indigo;">Driven by a relentless pursuit of knowledge and excellence, I am eager to bring my analytical prowess, technical skills, and innovative mindset to a new challenge in the data science and software development arenas.</span>
             </p>
@@ -108,7 +128,7 @@
         </div>
     </div>
 
-<!-- Rakesh Emuru Projects -->
+    <!-- Rakesh Emuru Projects -->
     <div class="projects-container" id="projects">
         <h2 style="color: brown; background-color: rgba(255, 255, 224, 0.8); display: inline-block; padding: 5px 10px; border-radius: 5px;">
             Projects</h2>
@@ -204,7 +224,7 @@
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
                                target="_blank" class="project-link">
                                 <p class="project-description truncated">
-                                   This project delves into the evolving landscape of New York City's commercial
+                                    This project delves into the evolving landscape of New York City's commercial
                                     sectors by
                                     analyzing the spatio-temporal trends of business distribution across different zip
                                     codes,
@@ -228,8 +248,8 @@
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
                                target="_blank" class="project-link">
-                                <p class="project-description truncated">                                    
-                                     This Citi Bike project examines the impact of New York City's expansive bike share
+                                <p class="project-description truncated">
+                                    This Citi Bike project examines the impact of New York City's expansive bike share
                                     program on
                                     urban living, focusing on usage patterns, community benefits, and the controversies
                                     surrounding
@@ -426,7 +446,7 @@
     }, 100);
   } else if (typeof fnCallback == 'function') {
     // Delay for the next message
-    setTimeout(fnCallback, 700);
+    setTimeout(fnCallback, 100);
   }
 }
 
@@ -443,19 +463,6 @@
         }
     }
     StartTextAnimation(0);
-
-document.addEventListener("DOMContentLoaded", function() {
-    var listItems = document.querySelectorAll('#about li');
-
-    listItems.forEach(function(item) {
-        item.onmouseover = function() {
-            this.style.color = 'yellowgreen';
-        };
-        item.onmouseout = function() {
-            this.style.color = '#333';
-        };
-    });
-});
 
 document.addEventListener('DOMContentLoaded', (event) => {
   // Get all anchor tags within the top-menu div
@@ -502,7 +509,6 @@ function StartTextAnimation(i) {
     }, colorClass);
   }
 }
-
 </script>
 
 </body>
