--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="C:\\Users\\emuru\\Downloads\\rakesh-emuru-photo.png">
-    <!--    <link rel="icon" type="image/png" href="Images/rakesh-emuru-photo.png">-->
+    <link rel="icon" type="image/png" href="Images/rakesh-emuru-photo.png">
     <link rel="stylesheet" href="rakesh_portfolio_styles.css">
 </head>
 <body>
