--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Predicted County Level Voter Turnout by conducting comprehensive analysis
                                     of U.S. voter turnout dynamics, including socio-economic factors, historical trends,
@@ -171,7 +171,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Developed a machine learning model to predict DonorsChoose.org proposal
                                     approvals, integrating data preprocessing, sentiment analysis, and advanced text
@@ -196,7 +196,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Utilized a Siamese convolutional neural network approach to authenticate
                                     signatures, distinguishing between genuine and forged examples with the application
@@ -221,7 +221,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This project delves into the evolving landscape of New York City's commercial
                                     sectors by
@@ -239,14 +239,14 @@
                     <div class="flipper">
                         <div class="front">
                             <img style="height:200px; width:200px;"
-                                 src="Images/newyork_stop_and_frisk.png"
+                                 src="Images/citi_bike_nyc.jpeg"
                                  alt="Project Image" class="project-image">
                             <div class="project-category">Machine Learning</div>
                             <h2 class="project-title">Ridership of Urban Bike Shares: the case of Citi Bike in NYC</h2>
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This Citi Bike project examines the impact of New York City's expansive bike share
                                     program on
@@ -275,7 +275,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This project analyzes gentrification in Philadelphia, examining shifts in median
                                     income and
@@ -300,7 +300,7 @@
                         </div>
                         <div class="back">
                             <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
-                               target="_blank" class="project-link" title="Click to view on GitHub>
+                               target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This project leverages Logistic Regression to predict the likelihood of diabetes
                                     among the Pima
