--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <h2 class="project-title">USA Voter Turnout Analysis and Prediction</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analysis%20and%20Prediction%20of%20Voter%20Turnout%20Percentage%20in%20USA/Rakesh_Emuru_Analysis_of_voter_turnout_in_the_USA.ipynb"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Predicted County Level Voter Turnout by conducting comprehensive analysis
@@ -220,7 +220,7 @@
                                 geographies</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analyzing%20Spatio_temporal_trends_in_the_number_of_businesses_per_zip_code_in_NYC/Rakesh_Emuru_Spatio_temporal_trends_in_the_number_of_businesses_per_zip_code_in_NYC_.ipynb"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This project delves into the evolving landscape of New York City's commercial
@@ -245,7 +245,7 @@
                             <h2 class="project-title">Ridership of Urban Bike Shares: the case of Citi Bike in NYC</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analyzing%20Citi%20Bike%20in%20NYC/Rakesh_Emuru_Analyzing_Citi_Bike_in_NYC_.ipynb"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This Citi Bike project examines the impact of New York City's expansive bike share
@@ -274,7 +274,7 @@
                             <h2 class="project-title">Outcomes of gentrification in Philedelphia</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/Analyzing%20Outcomes%20of%20Gentrification%20in%20Philedelphia/Rakesh_Emuru_Outcomes_of_gentrification.ipynb"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     This project analyzes gentrification in Philadelphia, examining shifts in median
