--- a/README.html
+++ b/README.html
@@ -1,5 +1,13 @@
 ## Rakesh Emuru
 
-Hi :wave: , I'm Rakesh Emuru, a Passionate data scientist with a solid academic background from the University of Delaware and hands-on experience across various industry projects. Proficient in all stages of the data science lifecycle, I thrive on extracting actionable insights from data. My contributions span text-as-data research and full-stack development, utilizing Python, machine learning, and data analysis to drive innovation. Demonstrated excellence through impactful achievements in previous roles. Eager to collaborate, innovate, and tackle complex challenges with data. Let's connect and explore opportunities together!
+Hi :wave: , I'm Rakesh Emuru.
+
+• Expertise in distilling complex datasets into strategic insights for informed decision-making.
+• Proficient in ML, computer vision, and NLP for tackling real-world problems.
+• Full-stack development acumen, crafting user-focused apps with seamless deployment.
+• Full SDLC proficiency, delivering projects with dedication to professional excellence.
+• Proven track record of meticulous project execution, ensuring successful outcomes.
+• Fast learner of new technologies, as demonstrated by my quick grasp of current ones.
+
 
 Actively seeking new data science full-time and Internship opportunities to further enhance my skills.
