--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!-- SKILLS SECTION -->
     <div class="skills-section" id="skills">
         <h2 style="color: brown; background-color: rgba(255, 255, 224, 0.8); display: inline-block; padding: 5px 10px; border-radius: 5px;">
-            Skill</h2>
+            Skills</h2>
         <div class="skill-image" style="text-align:center;">
             <img src="Images/Rakesh Skills level.png"
                  style="width:999px; height:auto;">
