--- a/README.html
+++ b/README.html
@@ -10,4 +10,4 @@ Hi :wave: , I'm Rakesh Emuru.
 • Fast learner of new technologies, as demonstrated by my quick grasp of current ones.
 
 
-Actively seeking new data science full-time and Internship opportunities to further enhance my skills.
+Actively seeking new data science full-time and Internship opportunities to solve Business Problems.
