--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                class="icon-button resume">
                 <i class="fa fa-file-text"></i> Resume
             </a>
+
+            <!--   LinkedIn Link Button  -->
+            <a href="https://www.linkedin.com/in/rakesh-emuru/" target="_blank"
+               class="fa fa-linkedin contact-icon">
+                <i class="contact-text"></i> Resume
+            </a>
+
         </div>
 
         <div class="value-proposition">
