--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
                 <i class="fa fa-file-text"></i> Resume
             </a>
 
-            <!--   LinkedIn Link Button  -->
-            <a href="https://www.linkedin.com/in/rakesh-emuru/" target="_blank"
-               class="fa fa-linkedin contact-icon">
-                <i class="contact-text"></i> Resume
-            </a>
+            <!-- LinkedIn Link Button -->
+        <a href="https://www.linkedin.com/in/rakesh-emuru/" target="_blank" class="icon-button linkedin">
+        <i class="fa fa-linkedin"></i> LinkedIn
+        </a>
 
         </div>
 
