--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a data-target="projects" onmouseover="this.style.cursor='pointer'">Projects</a>
     <a data-target="blogs" onmouseover="this.style.cursor='pointer'">Tech Blogs</a>
     <a href="https://drive.google.com/file/d/1xbk20RUdJ4PuN_dm4GR_ivvfiEc9agd3/view?usp=sharing"
-       target="_blank" onmouseover="this.style.cursor='pointer'">Resume</a>
+       target="_blank" onmouseover="this.style.cursor='pointer'"></a>
     <a data-target="contact" onmouseover="this.style.cursor='pointer'">Contact</a>
 </div>
 
@@ -43,7 +43,7 @@
             </a>
 
             <!-- Resume Link Button -->
-            <a href="https://drive.google.com/file/d/1xbk20RUdJ4PuN_dm4GR_ivvfiEc9agd3/view" target="_blank"
+            <a href="https://drive.google.com/file/d/1GnhPfx2cOveVC1oyLbv0gzudHhjvvMVR/view?usp=sharing" target="_blank"
                class="icon-button resume">
                 <i class="fa fa-file-text"></i> Resume
             </a>
