--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <a data-target="skills" onmouseover="this.style.cursor='pointer'">My Skills</a>
     <a data-target="projects" onmouseover="this.style.cursor='pointer'">Projects</a>
     <a data-target="blogs" onmouseover="this.style.cursor='pointer'">Tech Blogs</a>
-    <a href="https://drive.google.com/file/d/1xbk20RUdJ4PuN_dm4GR_ivvfiEc9agd3/view?usp=sharing"
-       target="_blank" onmouseover="this.style.cursor='pointer'"></a>
+    <a href="https://drive.google.com/file/d/1GnhPfx2cOveVC1oyLbv0gzudHhjvvMVR/view?usp=sharing" onmouseover="this.style.cursor='pointer'">Resume</a>
     <a data-target="contact" onmouseover="this.style.cursor='pointer'">Contact</a>
 </div>
 
