--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li><span>•</span> Proficient in ML, computer vision, and NLP for tackling real-world problems.</li>
                 <li><span>•</span> Full-stack development acumen, crafting user-focused apps with seamless deployment.
                 </li>
-                <li><span>•</span> Full SDLC proficiency, delivering projects with dedication to professional
+                <li><span>•</span> Full SDLC proficiency, delivering s with dedication to professional
                     excellence.
                 </li>
                 <li><span>•</span> Proven track record of meticulous project execution, ensuring successful outcomes.
@@ -200,7 +200,7 @@
                             <h2 class="project-title">Signature Authentication with Siamese Networks</h2>
                         </div>
                         <div class="back">
-                            <a href="https://github.com/rakesh-emuru/Data-Science/blob/main/Projects/NYC%20Stop%20and%20Frisk/Rakesh_Emuru_NYC_Stop_and_Frisk_predictors_of_outcomes.ipynb"
+                            <a href="https://colab.research.google.com/drive/1h4L9xNV-tlFna9Iu6_SPihdif3nr_yHV#scrollTo=DM39r5vqK5yg"
                                target="_blank" class="project-link" title="Click to view on GitHub">
                                 <p class="project-description truncated">
                                     Utilized a Siamese convolutional neural network approach to authenticate
@@ -212,6 +212,28 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project">
+                <div class="flip-container">
+                    <div class="flipper">
+                        <div class="front">
+                            <img style="height:200px; width:200px;"
+                                 src="Images/anime_project.jpeg"
+                                 alt="Project Image" class="project-image">
+                            <div class="project-category">Computer Vision</div>
+                            <h2 class="project-title">Generate Anime Images Using GANs</h2>
+                        </div>
+                        <div class="back">
+                            <a href="https://colab.research.google.com/drive/1A0nBnPuHCZ3GHztn8a_NRFE6HIzTBD2-?usp=sharing"
+                               target="_blank" class="project-link" title="Click to view on GitHub">
+                                <p class="project-description truncated">
+                                    Generative Adversarial Network (GAN) to produce novel anime images and evaluate their quality.
+                                </p></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
 
             <div class="project">
                 <div class="flip-container">
