--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 and mastery in automating data extraction processes for stock market analytics. This role honed my
                 skills in Python, Django, and SQL, and underscored my impact in a fast-paced, data-driven environment.
 
-                <a href="https://drive.google.com/file/d/1xT2O_olL4kjY2lzaYM4BQktOlDtfQx8R/view?usp=sharing"> Click to See Some of the work in Production </a>
+                <a href="https://drive.google.com/file/d/1xT2O_olL4kjY2lzaYM4BQktOlDtfQx8R/view?usp=sharing" style="color: seagreen;">Click to See Some of the work in Production</a>
             </p>
             <p>
                 My transition to Data Science was cemented at the University of Delaware, where as a <span style="color: blue;"> Data Science Research Assistant</span>,
