--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a data-target="skills" onmouseover="this.style.cursor='pointer'">My Skills</a>
     <a data-target="projects" onmouseover="this.style.cursor='pointer'">Projects</a>
     <a data-target="blogs" onmouseover="this.style.cursor='pointer'">Tech Blogs</a>
-    <a href="https://drive.google.com/file/d/1GnhPfx2cOveVC1oyLbv0gzudHhjvvMVR/view?usp=sharing" onmouseover="this.style.cursor='pointer'">Resume</a>
+    <a href="https://drive.google.com/file/d/1_g1_5X_iqJAWYnbv1ad3qUC7Fp9Lacw7/view?usp=sharing"  target="_blank" onmouseover="this.style.cursor='pointer'">Resume</a>
     <a data-target="contact" onmouseover="this.style.cursor='pointer'">Contact</a>
 </div>
 
@@ -42,7 +42,7 @@
             </a>
 
             <!-- Resume Link Button -->
-            <a href="https://drive.google.com/file/d/1GnhPfx2cOveVC1oyLbv0gzudHhjvvMVR/view?usp=sharing" target="_blank"
+            <a href="https://drive.google.com/file/d/1_g1_5X_iqJAWYnbv1ad3qUC7Fp9Lacw7/view?usp=sharing" target="_blank"
                class="icon-button resume">
                 <i class="fa fa-file-text"></i> Resume
             </a>
