--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="value-proposition">
-            <h2 style="font-weight: 700;"><i class="fa fa-user" aria-hidden="true"></i> The Advantage of Hiring Me.</h2>
+            <h2 style="font-weight: 700;"><i class="fa fa-user" aria-hidden="true"></i> Why I'm the Right Fit! </h2>
             <ol>
                 <li><span>•</span> Expertise in distilling complex datasets into strategic insights for informed
                     decision-making.
