--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 </style>
 </head>
 <body>
-    <div class="container" id="about">
-        <div class="section">
+    <div class="container" >
+        <div class="section" id="about">
             <h2>About Me</h2>
             <hr>
             <p style="text-align: left;">
